--- a/docs/random-beacon/staking/leverage.adoc
+++ b/docs/random-beacon/staking/leverage.adoc
@@ -1,68 +1,138 @@
-= Leveraged vs atomic staking
+= Staking models
 
-Leveraged staking::
-Stakes aren't locked for operations;
-when a staker gets punished their tokens are slashed
-without regard for what other operations they participate in.
-Stakes may end up leveraged when a staker participates in many operations
-and the total maximum punishment exceeds the actual collateral.
-The minimum stake remains constant.
+To develop a suitable staking model for the network,
+it is necessary to choose between two different models
+for handling stakes: _leveraged_ or _fully backed_.
 
-Atomic staking::
-Stakes locked for each operation upon joining, 
-thus operations are always backed by actual collateral.
-The network capacity is limited by available stake,
-and stake requirements will be adjusted based on demand.
+== Fully backed staking
+Staked tokens are divided to
+_free stakes_ that can be used as collateral for new operations,
+and _locked stakes_ that are already backing some existing operation.
+When a (virtual) staker joins a new operation
+requiring some amount of tokens as collateral,
+the staker is required to _lock up_ some of their _free stake_.
++
+This _locked stake_ is held as collateral
+to ensure any misbehavior in the operation can be properly penalized,
+and cannot be used for any other operation.
+When the operation finishes,
+all stake locked for that particular operation is released.
++
+This ensures that all operations are always _fully backed_ by actual stake,
+and operations never interfere with each other's stakes.
+However, the network throughput is limited
+because there is only so much stake available for collateral,
+especially for operations requiring high stakes.
 
-== Atomic staking
+== Leveraged staking
+When operations require tokens as collateral,
+stakers who join the operation are required to hold sufficient stake
+without considering other operations.
+A staker is able to join more operations
+than they could pay the maximum penalty for,
+thus becoming _leveraged_.
++
+If a _leveraged_ staker gets penalised on some of their operations,
+their token balance may fall below
+the amount they would be slashed for some subsequent misbehavior.
+A staker whose penalty exceeds their remaining stake
+_defaults_ on the operation.
+The possibility of a default
+can significantly reduce the incentives for correct behavior.
++
+On the upside,
+leveraged staking is simpler and cheaper to implement,
+it has no limits on the number of concurrent operations,
+and the _marginal deterrent_ to misbehavior can be higher.
 
-With atomic staking, each operation is backed by hard tokens.
-When Alice joins an operation requiring 5 tokens in stake,
-she will need to lock up those 5 tokens until that operation is finished.
+== Demand and network throughput
+Let a staker's _used stake_ be the sum of the stakes required
+for each operation they participate in.
+In fully backed staking _used stake = locked stake_.
+With leveraged staking,
+_used stake_ equals the sum of all penalties the staker could incur
+from misbehaving on each operation they participate in.
 
-Atomicity guarantees that all stakers
-will always have the specified amount of tokens at stake for each operation.
-This has the attractive property
-of preventing situations where somebody could misbehave "for free"
-by having no stake to be slashed.
+A staker's _usage ratio (UR)_ equals ther _used stake / total stake_.
+In fully backed staking
+each staker by definition has a usage ratio between 0 and 1.
+Let the system's _average usage ratio (AUR)_ be
+the _total used stake / total tokens staked_ across all stakers.
+This is also between 0 and 1.
 
-However, a serious downside of atomicity is
-that the throughput of the network has a hard limit at
-_concurrent operations =< total tokens staked / stake per operation_.
-To deal with this, the _stake per operation_ needs to be reduced
-as network demand increases.
-This creates a symmetrical constraint in
-_stake per operation =< total tokens staked / concurrent operations_.
+=== Scaling with fully backed staking
+Because _used stake = stake per operation * concurrent operations_,
+the limit of _UR = 1_ limits the number of concurrent operations
+to _total tokens staked / stake per operation_.
+Correspondingly,
+the only way to increase the limit on concurrent operations
+is to reduce the _stake per operation_ as demand increases.
 
-Let Alice's _used stake_ be the sum of the stakes required
-for each operation Alice is participating in.
-The _usage ratio_ is the ratio of _used stake / stake_.
-Atomic staking by definition has a usage ratio between 0 and 1.
-Let _average usage ratio = total used stake / total tokens staked_.
+==== Adjustment by hard fork
+The simplest method would be to perform hard forks
+to update stake requirements whenever usage gets too high.
+This is unlikely to be viable
+for a successful system aiming at significant growth.
 
-Let the _demand ratio_ be
-_concurrent operations * initial minimum stake / total tokens staked_.
-When the _demand ratio_ exceeds 1,
-the minimum stake must be reduced to allow further network operations.
-If _demand ratio = 4_,
-and _current minimum stake = initial minimum stake / 8_,
-the _average usage ratio_ would be 0.5.
+==== Decreasing stake requirements
+Another relatively simple method would be to reduce stakes and penalties
+dynamically as usage increases.
+Any new operations after the adjustment would use the new stake quantities,
+while existing operations stay on the old stakes until released.
 
-== Leveraged stakes
+Because the update applies incrementally,
+it would be necessary to maintain a sufficient margin
+to avoid running out of free stake.
+For example, stakes could be halved globally whenever the UR exceeds 0.5.
 
-Without atomic staking, a staker can end up _leveraged_:
-i.e. Alice may be participating in so many operations
-that her total stakes would be insufficient
-to cover the maximum penalty for all of them.
-This can theoretically result in a situation
-where Alice's stake is slashed in its entirety
-by a small number of misbehaviors,
-leaving no effective deterrent to further misbehavior.
+This has the downside that pre-update and post-update stakes are inequal.
+Someone joining an operation just before the update
+would have locked up twice the tokens for the same reward
+as someone joining a similar operation shortly after.
 
-=== Leverage ratio
+Additionally, the protocol may not be able to cope with rapid growth
+if demand rises faster than old operations end and release more tokens.
+Determining the update threshold in periods of rapid growth
+would require complex formulae to avoid running out of free tokens.
 
+==== Separate stake units
+If locked stakes are denominated in _stake units_
+instead of absolute token amounts,
+scaling the system becomes relatively simple.
+
+The exchange rate of tokens to stake units
+would be centrally managed based on the usage ratio,
+and any actions involving stake would use the latest exchange rate.
+Work contracts would define their stake requirements in stake units,
+and locked stakes would be denominated in stake units as well.
+
+If Alice, with 3 stake,
+joins an operation requiring 2 stake units
+when the exchange rate is 1,
+the staking contract would record 2 stake units locked up.
+At this time Alice's locked stakes would be worth 2/3 tokens,
+and thus she would not be eligible
+to join another operation requiring 2 stake units.
+
+If the exchange rate rises to 1.4 stake units per token,
+Alice's 3 staked tokens would equal 4.2 stake units.
+Now Alice would be able to join another operation,
+bringing her locked stake units to 4, worth 2.86 tokens.
+
+When Alice finishes one operation honorably,
+the corresponding 2 stake units are unlocked.
+If Alice gets penalized,
+the penalty is denominated in stake units
+and her tokens are seized according to the exchange rate.
+If the exchange rate is 1.7 at the time of a penalty of 2 units,
+Alice's stake would be slashed by 1.18 tokens.
+
+The exchange rate could be updated in a very fine-grained manner,
+and stakes would be freed up immediately to match growing demand. 
+
+== Leverage, overleverage and attacks
 Call the ratio _used stake / stake_ the _leverage ratio_.
-This is the same formula as the _usage ratio_ of atomic staking,
+This is the same formula as the _usage ratio_ of fully backed staking,
 but is not constrained to be below 1.
 
 If Alice has 50 stake and is participating in 7 operations,
@@ -79,18 +149,15 @@ with 14 tokens at stake,
 the _average leverage ratio_ is 1.4.
 With leveraged stakes, _average leverage ratio_ equals the _demand ratio_.
 
-=== Overleverage
-
 If Alice has a _leverage ratio_ exceeding the _average leverage ratio_,
-she may be called _overleveraged_.
+she may be called _overleveraged_ relative to other stakers.
 Let _overleverage ratio_ equal
 _leverage ratio / max(1, average leverage ratio)_.
 If Alice's LR is 3.0 and the ALR is 2.0,
 Alice's _overleverage ratio_ would be 1.5.
 If Bob's LR is 1.8 he would be _underleveraged_ at OR = 0.9.
 
-== Overleverage attacks
-
+=== Overleverage attacks
 When a staker misbehaves,
 the standard recourse is to punish them by taking away staked tokens.
 If Mallory has a high leverage ratio,
@@ -125,8 +192,7 @@ Mallory's _marginal deterrent_ equals their _total deterrent_,
 and the effective _per-operation deterrent_ equals the minimum stake
 divided by Mallory's leverage ratio.
 
-=== Demand ratio and overleverage
-
+==== Demand ratio and overleverage
 When analyzed in a vacuum,
 it appears as if any degree of leverage would render the network vulnerable.
 However, when comparing atomic and leveraged staking,
@@ -179,8 +245,7 @@ and per-operation deterrent remains constant.
 
 Thus the name _overleverage attack_.
 
-=== Blitzpantsing reduction
-
+==== Blitzpantsing reduction
 The law of large numbers significantly reduces the likelihood
 of a staker having a large overleverage ratio
 as their total stake increases.
@@ -236,8 +301,7 @@ blitzpantsed staker identities with favorable overleverage ratios
 will always be as strong or stronger than
 what would be possible with monolithic staking.
 
-=== Overleverage attack mitigation
-
+==== Overleverage attack mitigation
 As the ALR increases, the viability of overleverage attacks decreases.
 An OR of 2 is much easier to achieve with an ALR of 1,
 where a minimum staker needs to join 2 operations,
@@ -275,6 +339,65 @@ If the minimum stake is higher than the maximum penalty,
 fewer virtual stakers will become overleveraged
 and those that do will have a lower OR.
 
+
+
+
+
+
+
+
+== [old notes]
+
+== Atomic staking
+
+With atomic staking, each operation is backed by hard tokens.
+When Alice joins an operation requiring 5 tokens in stake,
+she will need to lock up those 5 tokens until that operation is finished.
+
+Atomicity guarantees that all stakers
+will always have the specified amount of tokens at stake for each operation.
+This has the attractive property
+of preventing situations where somebody could misbehave "for free"
+by having no stake to be slashed.
+
+However, a serious downside of atomicity is
+that the throughput of the network has a hard limit at
+_concurrent operations =< total tokens staked / stake per operation_.
+To deal with this, the _stake per operation_ needs to be reduced
+as network demand increases.
+This creates a symmetrical constraint in
+_stake per operation =< total tokens staked / concurrent operations_.
+
+Let Alice's _used stake_ be the sum of the stakes required
+for each operation Alice is participating in.
+The _usage ratio_ is the ratio of _used stake / stake_.
+Atomic staking by definition has a usage ratio between 0 and 1.
+Let _average usage ratio = total used stake / total tokens staked_.
+
+Let the _demand ratio_ be
+_concurrent operations * initial minimum stake / total tokens staked_.
+When the _demand ratio_ exceeds 1,
+the minimum stake must be reduced to allow further network operations.
+If _demand ratio = 4_,
+and _current minimum stake = initial minimum stake / 8_,
+the _average usage ratio_ would be 0.5.
+
+== Leveraged stakes
+
+Without atomic staking, a staker can end up _leveraged_:
+i.e. Alice may be participating in so many operations
+that her total stakes would be insufficient
+to cover the maximum penalty for all of them.
+This can theoretically result in a situation
+where Alice's stake is slashed in its entirety
+by a small number of misbehaviors,
+leaving no effective deterrent to further misbehavior.
+
+=== Leverage ratio
+
+
+
+
 == Improving atomic staking
 
 Atomic staking has two main weaknesses:
@@ -285,78 +408,7 @@ the throughput of atomic staking must be able to scale
 for the system to be successful.
 This necessitates lowering the stake requirements as demand increases.
 
-We need to know the total used stake
-to be able to make these adjustments.
-This can be tracked systemwide with a global variable
-which gets updated whenever stake is locked up or freed.
-The question of how to perform adjustments is more complex.
-
-=== Adjustment by hard fork
-
-The simplest method would be to perform hard forks
-to update stake requirements whenever usage gets too high.
-This is unlikely to be viable
-for a successful system aiming at significant growth.
-
-=== Reducing stake requirements
-
-Another relatively simple method would be to reduce stakes and penalties
-dynamically as usage increases.
-Any new operations after the adjustment would use the new stake quantities,
-while existing operations stay on the old stakes until released.
-
-Because the update applies incrementally,
-it would be necessary to maintain a sufficient margin
-to avoid running out of free stake.
-For example, stakes could be halved globally whenever the UR exceeds 0.5.
-
-This has the downside that pre-update and post-update stakes are inequal.
-Someone joining an operation just before the update
-would have locked up twice the tokens for the same reward
-as someone joining a similar operation shortly after.
-
-Additionally, the protocol may not be able to cope with rapid growth
-if demand rises faster than old operations end and release more tokens.
-Determining the update threshold in periods of rapid growth
-would require complex formulae to avoid running out of free tokens.
-
-=== Separate stake units
-
-If locked stakes are denominated in _stake units_
-instead of absolute token amounts,
-scaling the system becomes relatively simple.
-
-The exchange rate of tokens to stake units
-would be centrally managed based on the usage ratio,
-and any actions involving stake would use the latest exchange rate.
-Work contracts would define their stake requirements in stake units,
-and locked stakes would be denominated in stake units as well.
-
-If Alice, with 3 stake,
-joins an operation requiring 2 stake units
-when the exchange rate is 1,
-the staking contract would record 2 stake units locked up.
-At this time Alice's locked stakes would be worth 2/3 tokens,
-and thus she would not be eligible
-to join another operation requiring 2 stake units.
-
-If the exchange rate rises to 1.4 stake units per token,
-Alice's 3 staked tokens would equal 4.2 stake units.
-Now Alice would be able to join another operation,
-bringing her locked stake units to 4, worth 2.86 tokens.
-
-When Alice finishes one operation honorably,
-the corresponding 2 stake units are unlocked.
-If Alice gets penalized,
-the penalty is denominated in stake units
-and her tokens are seized according to the exchange rate.
-If the exchange rate is 1.7 at the time of a penalty of 2 units,
-Alice's stake would be slashed by 1.18 tokens.
-
-The exchange rate could be updated in a very fine-grained manner,
-and stakes would be freed up immediately to match growing demand. 
-
-== [old notes] Analysis
+== Analysis
 
 When comparing atomic and leveraged staking,
 a crucial consideration is whether one or the other
