Fix absence of global parameters in DKG terms

--- a/docs/random-beacon/dkg/index.adoc
+++ b/docs/random-beacon/dkg/index.adoc
@@ -22,7 +22,11 @@ is defined.
 
 ifndef::yellowpaper[toc::[]]
 
+== Terms
+
 :leveloffset: +1
+
+include::../global-parameters.adoc[]
 
 include::terms.adoc[]
 
