--- a/docs/random-beacon/terms.adoc
+++ b/docs/random-beacon/terms.adoc
@@ -113,32 +113,10 @@ The probability of some event
 
 === Globally significant values
 
-==== Global security parameters
-
-[horizontal]
-N::
-H + M = 2M + 1 = 4M~nofail~ + 1
-+
-Number of participants in a group
-
-H::
-M + 1 = (N - 1)/2 + 1
-+
-Minimum number of honest participants in a group
-
-M::
-H - 1 = (N - 1)/2
-+
-Maximum number of malicious participants in a group beyond which security
-guarantees don't hold
-
-M~nofail~::
-M/2 = (N - 1)/4
-+
-Maximum number of disqualified participants in a group beyond which DKG will
-abort to preserve security
 
 :leveloffset: +1
+
+include::global-parameters.adoc[]
 
 include::alt_bn128.adoc[]
 
